--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon-loop.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Loop | Leveraged Restaking</title>
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="/favicon.svg">
 
     <meta name="description" content="Leveraged Restaking">
     <meta name="application-name" content="Loop | Leveraged Restaking">
